[package]
name = "csv_csp"
version = "0.1.0"
edition = "2021"

authors = ["Sven Ponelat"]
license = "MIT OR Apache-2.0"
description = "converting csv file to a vector of a vector of strings"
repository = "https://github.com/svencp/csv_csp.git"
keywords = ["csv", "parser", "delimited"]
categories = ["parser-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
